--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -9,7 +9,7 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="49dp"
         android:background="#FF9800"
         android:fontFamily="@font/open_sans"
@@ -25,7 +25,7 @@
     <ListView
         android:id="@+id/orderListView"
         android:layout_width="match_parent"
-        android:layout_height="354dp"
+        android:layout_height="475dp"
         tools:layout_editor_absoluteX="1dp" />
 
     <TextView
