--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,32 +14,23 @@
         android:text="go to main page"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment" />
+        app:layout_constraintTop_toBottomOf="@+id/tableText"
+        app:layout_constraintVertical_bias="0.171" />
 
     <TextView
         android:id="@+id/tableText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mesa "
+        android:fontFamily="@font/m_bold"
+        android:text="SUA MESA"
+        android:textColor="#494949"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mp_actionbar"
-        app:layout_constraintVertical_bias="0.338" />
-
-    <TextView
-        android:id="@+id/restaurantText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Restaurante"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.154"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment"
-        app:layout_constraintVertical_bias="0.227" />
+        app:layout_constraintTop_toBottomOf="@+id/restaurantText"
+        app:layout_constraintVertical_bias="0.083" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -51,7 +42,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu" >
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <fragment
         android:id="@+id/nav_host_fragment"
@@ -72,5 +65,18 @@
         layout="@layout/top_actionbar"
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="61dp" />
+
+    <TextView
+        android:id="@+id/restaurantText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:fontFamily="@font/m_bold"
+        android:text="BEM-VINDO(A)"
+        android:textColor="#000000"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mp_actionbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
