--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -7,38 +7,43 @@
     android:padding="20dp"
     >
 
-    <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:src="@mipmap/ic_launcher"
-        android:id="@+id/thumb"
-        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/ic_launcher"
+            android:id="@+id/thumb"
+            />
+
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:textColor="#000"
-            android:textStyle="bold"
-            android:layout_margin="5dp"
-            android:textSize="20dp"
             android:id="@+id/titleText"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Subtitle"
-            android:textColor="#a9a9a9"
-            android:textStyle="bold"
+            android:layout_width="166dp"
+            android:layout_height="fill_parent"
             android:layout_margin="5dp"
-            android:textSize="15sp"
+            android:fontFamily="@font/open_sans_semibold"
+            android:paddingLeft="12dp"
+            android:paddingTop="8dp"
+            android:text="Pizza de buceta"
+            android:textColor="#00112c"
+            android:textSize="18dp"
+            android:gravity="center|left"/>
+
+        <TextView
             android:id="@+id/descriptionText"
-            />
+            android:layout_width="87dp"
+            android:layout_height="fill_parent"
+            android:layout_margin="2dp"
+            android:fontFamily="@font/open_sans_bold"
+            android:gravity="center|end
+"
+            android:text="50,69"
+            android:textColor="#FF9800"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
