--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.notifications.NotificationsFragment">
 
+    <include
+        android:id="@+id/mp_actionbar"
+        layout="@layout/top_actionbar"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="61dp" />
+
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
@@ -26,7 +32,8 @@
         android:id="@+id/orderListView"
         android:layout_width="match_parent"
         android:layout_height="475dp"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintTop_toBottomOf="@+id/mp_actionbar"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/tv"
