--- a/app/src/main/res/layout/reader_page.xml
+++ b/app/src/main/res/layout/reader_page.xml
@@ -6,6 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/mp_actionbar"
+        layout="@layout/top_actionbar"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="61dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
