--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -5,17 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.notifications.NotificationsFragment">
-
-    <include
-        android:id="@+id/mp_actionbar"
-        layout="@layout/top_actionbar"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="61dp" />
+    tools:context=".ui.notifications.NotificationsFragment"
+    android:layout_marginTop="10dp">
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="49dp"
         android:background="#FF9800"
         android:fontFamily="@font/open_sans"
@@ -26,14 +21,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.906" />
+        app:layout_constraintVertical_bias="0.935" />
 
     <ListView
         android:id="@+id/orderListView"
         android:layout_width="match_parent"
         android:layout_height="475dp"
-        app:layout_constraintTop_toBottomOf="@+id/mp_actionbar"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tv"
