Testing launching activity from bottombar (and I did it, suck it bitches)

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.notifications.NotificationsFragment"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:background="@android:color/white"
+    android:clickable="true">
 
     <Button
         android:id="@+id/button2"
