Creating menu fragment and sending user to AccountPage with Account button

--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -110,12 +110,13 @@
     <Button
         android:id="@+id/button6"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:backgroundTint="#9C0303"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:alpha="1.0"
+        android:backgroundTint="#9C0303"
         android:fontFamily="@font/m_bold"
+        android:onClick="closeAccount"
         android:shadowColor="#302F2F"
         android:text="PAGAR CONTA"
         android:textSize="24sp"
