--- a/app/src/main/res/layout/top_actionbar.xml
+++ b/app/src/main/res/layout/top_actionbar.xml
@@ -6,4 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/purple_gradient"
-    app:navigationIcon="@drawable/logoicon"></androidx.appcompat.widget.Toolbar>
+    app:navigationIcon="@drawable/logoicon"
+    ></androidx.appcompat.widget.Toolbar>
