--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -25,7 +25,7 @@
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:background="@drawable/purple_gradient"
-      app:navigationIcon="@drawable/logoicon"
+      app:navigationIcon="@drawable/logoicon2"
       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
   <android.opengl.GLSurfaceView
