--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -233,21 +233,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp">
+
                     <TextView
+                        android:id="@+id/youtube"
+                        android:layout_width="186dp"
+                        android:layout_height="86dp"
                         android:background="?attr/selectableItemBackground"
                         android:clickable="true"
-                        android:focusable="true"
-                        android:id="@+id/youtube"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/youtube"
-                        android:padding="14dp"
-                        android:textSize="16sp"
-                        android:textColor="#EC2D2D"
-                        android:gravity="center_vertical"
-                        android:drawablePadding="10dp"
+                        android:drawableStart="@drawable/ic_baseline_add_shopping_cart_24"
                         android:drawableLeft="@drawable/ic_baseline_add_shopping_cart_24"
-                        android:drawableStart="@drawable/ic_baseline_add_shopping_cart_24" />
+                        android:drawablePadding="10dp"
+                        android:focusable="true"
+                        android:gravity="center_vertical"
+                        android:padding="14dp"
+                        android:text="@string/youtube"
+                        android:textColor="#EC2D2D"
+                        android:textSize="16sp" />
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:layout_weight="1"
