--- a/app/src/main/res/layout/item_recycler_meal.xml
+++ b/app/src/main/res/layout/item_recycler_meal.xml
@@ -58,6 +58,10 @@
             android:id="@+id/idMeal"
             android:layout_width="0dp"
             android:layout_height="0dp" />
+        <TextView
+            android:id="@+id/idCategory"
+            android:layout_width="0dp"
+            android:layout_height="0dp" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
