--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -63,13 +63,14 @@
         app:layout_constraintTop_toBottomOf="@+id/mp_actionbar" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/seeMenu"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:alpha="1.0"
         android:fontFamily="@font/m_bold"
+        android:onClick="showMenu"
         android:shadowColor="#000000"
         android:text="    FAZER PEDIDO    "
         android:textSize="24sp"
@@ -125,7 +126,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/seeMenu" />
 
     <TextView
         android:id="@+id/front_table"
