--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:padding="20dp"
+    android:descendantFocusability="blocksDescendants"
     >
 
     <LinearLayout
@@ -21,16 +22,15 @@
 
         <TextView
             android:id="@+id/titleText"
-            android:layout_width="166dp"
+            android:layout_width="170dp"
             android:layout_height="fill_parent"
-            android:layout_margin="5dp"
             android:fontFamily="@font/open_sans_semibold"
+            android:gravity="center|left"
             android:paddingLeft="12dp"
             android:paddingTop="8dp"
             android:text="Pizza de buceta"
             android:textColor="#00112c"
-            android:textSize="18dp"
-            android:gravity="center|left"/>
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/descriptionText"
