--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -20,6 +20,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.tanamesaapp.ar.HelloArActivity">
 
+  <Button
+      android:id="@+id/bt"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentTop="true"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="13dp"
+      android:backgroundTint="#336699"
+      android:text="Muda Objeto" />
+
+  <Button
+      android:id="@+id/zoomOut"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentEnd="true"
+      android:layout_alignParentBottom="true"
+      android:layout_marginEnd="19dp"
+      android:layout_marginBottom="127dp"
+      android:text="-"
+      android:textSize="30sp" />
+
+  <Button
+      android:id="@+id/zoomIn"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_above="@+id/zoomOut"
+      android:layout_alignEnd="@+id/zoomOut"
+      android:layout_marginEnd="0dp"
+      android:layout_marginBottom="-5dp"
+      android:text="+"
+      android:textSize="30sp" />
+
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
