--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -82,13 +82,13 @@
     <Button
         android:id="@+id/button5"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:backgroundTint="#9C0303"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:alpha="1.0"
+        android:backgroundTint="#9C0303"
         android:fontFamily="@font/m_bold"
-        android:onClick="callWaiter"
+        android:onClick="showDashboard"
         android:shadowColor="#302F2F"
         android:text="CHAMAR GARÇOM"
         android:textSize="24sp"
@@ -104,6 +104,7 @@
         android:layout_marginTop="12dp"
         android:alpha="1.0"
         android:fontFamily="@font/m_bold"
+        android:onClick="showBill"
         android:shadowColor="#302F2F"
         android:text="PAGAR CONTA"
         android:textSize="24sp"
