--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -21,17 +21,19 @@
     tools:context="com.example.tanamesaapp.ar.HelloArActivity">
 
   <Button
+      android:visibility="gone"
       android:id="@+id/bt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="13dp"
+      android:layout_marginStart="24dp"
+      android:layout_marginTop="89dp"
       android:backgroundTint="#336699"
       android:text="Muda Objeto" />
 
   <Button
+      android:visibility="gone"
       android:id="@+id/zoomOut"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -43,6 +45,7 @@
       android:textSize="30sp" />
 
   <Button
+      android:visibility="gone"
       android:id="@+id/zoomIn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -60,6 +63,14 @@
       android:background="@drawable/purple_gradient"
       app:navigationIcon="@drawable/logoicon2"
       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+  <com.google.android.material.tabs.TabLayout
+      android:id="@+id/tabLayout"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:tabIndicatorHeight="3dp"
+      app:tabIndicatorColor="@color/colorPrimary"
+      app:tabMode="scrollable"
+      app:tabContentStart="85dp"/>
 
   <android.opengl.GLSurfaceView
       android:id="@+id/surfaceview"
